specs/burst/creepminer-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: creepminer

spec:
  selector:
    app: creepminer
  ports:
    - name: tcp
      port: 8080
