specs/burst/p2p-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: burst-p2p

spec:
  selector:
    app: burst
  type: NodePort
  ports:
    - name: tcp
      port: 8123
      nodePort: 30123
