specs/burst/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: burst 

spec:
  selector:
    app: burst
  ports:
    - name: http
      port: 8125
