specs/burst/creepminer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: creepminer
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: "kube-system/client-ca-ingress"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"

spec:
  tls:
     - secretName: creepminer.d26a.de
       hosts:
         - creepminer.d26a.de
  rules:
  rules:
  - host: creepminer.d26a.de
    http:
      paths:
      - backend:
          serviceName: creepminer
          servicePort: 8080
